--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -60,6 +63,7 @@ dependencies {
 
     implementation "androidx.compose.material:material:1.4.0-alpha01"
     implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -98,6 +102,27 @@ dependencies {
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.0-alpha01"
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity'
+
+    implementation "com.google.accompanist:accompanist-pager:0.19.0"
+
+    // If using indicators, also depend on
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0"
+
+
+    //media3
+    implementation 'androidx.media3:media3-exoplayer:1.0.0-alpha03'
+    implementation "androidx.media3:media3-ui:1.0.0-alpha03"
+    implementation"androidx.media3:media3-session:1.0.0-alpha03"
+
+    //retrolfit
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.10'
 }
 kapt {
     correctErrorTypes = true
